<resources>
    <string name="app_name">Escola</string>
    <string name="nome">Nome</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Numero</string>
    <string name="cep">CEP</string>
    <string name="cep1">Cep: </string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="complemento">Complemento</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="professor">Professor</string>
    <string name="professors">Professor:</string>
    <string name="descricao">Descrição</string>
    <string name="descricaos">Descrição:</string>
    <string name="aluno">Aluno</string>
    <string name="materia">Materia</string>
    <string name="nota1s">Nota1:</string>
    <string name="nota2s">Nota2:</string>
    <string name="nota3s">Nota3:</string>
    <string name="nota4s">Nota4:</string>
    <string name="nota1">Nota 1:</string>
    <string name="nota2">Nota 2</string>
    <string name="nota3">Nota 3</string>
    <string name="nota4">Nota 4</string>
    <string name="falta">Faltas</string>
    <string name="title_activity_main">Escola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cadastro_aluno">Cadastro Aluno</string>
    <string name="notas">Notas</string>
    <string name="sair">Sair</string>
    <string name="codigo">Codigo</string>
    <string name="excluir">Excluir</string>
    <string name="salvar">Salvar</string>
    <string name="email">Email</string>
    <string name="erro_campo_obrigatorio">Informe o campo \"%s\"</string>
    <string name="erro_login">Usuário ou Senha inválido"</string>
    <string name="faltas">Faltas:</string>
    <string name="login">Login</string>
    <string name="confirmar">Confirmar</string>
    <string name="erro_acesso">Usuario ou senha inválidos</string>
    <string name="titulo_erro">Erro...</string>

</resources>
