<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aluno"
            android:icon="@drawable/baseline_person_white_24"
            android:title="@string/aluno" />
        <item
            android:id="@+id/nav_professor"
            android:icon="@drawable/baseline_school_24"
            android:title="@string/professor" />
        <item
            android:id="@+id/nav_materia"
            android:icon="@drawable/baseline_local_library_black_24"
            android:title="@string/materia" />
        <item
            android:id="@+id/nav_nota"
            android:icon="@drawable/baseline_looks_one_24"
            android:title="@string/notas" />
    </group>

    <item
        android:id="@+id/nav_sair"
        android:icon="@drawable/baseline_keyboard_backspace_black_24"
        android:title="@string/sair" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_exit_to_app_black_24"
        android:title="Logout" />


</menu>
