<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textNomeProfessor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/nome" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textCodigoProfessor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cep1"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textCepProfessor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textEnderecoProfessor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="12sp"
        android:text="@string/endereco"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textNumeroProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="12sp"
        android:text="@string/numero"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textCidadeProfessor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="12sp"
        android:text="@string/cidade"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textEstadoProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="12sp"
        android:text="@string/estado"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textEmailProfessor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        android:text="@string/email"/>

</LinearLayout>