<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/nome"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editNomeAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:elevation="1dp"
            android:maxLines="1"
            android:lines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/cep"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editCepAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLength="8"
            android:inputType="number"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/endereco"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editEnderecoAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/cidade"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editCidadeAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/estado"
            android:textSize="12sp" />



        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editEstadoAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/numero"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editNumeroAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/complemento"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editComplementoAluno"
            android:background="@drawable/shape_edit_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:elevation="1dp"
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

 </LinearLayout>

</ScrollView>